# AI4BHARAT

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  permissions.py  query.py  responses.py
app/api/routes/: __init__.py  auth.py  comments.py  issues.py  projects.py
app/core/: config.py  limiter.py  logging.py  metrics.py
app/db/: session.py  types.py
app/models/: __init__.py  comment.py  issue.py  project.py  user.py
app/schemas/: auth.py  comment.py  common.py  issue.py  project.py  user.py
app/services/: __init__.py  audit.py  auth.py  pii.py  security.py  token_store.py
infra/k8s/: deployment.yaml
infra/nginx/: nginx.conf
migrations/: env.py
migrations/versions/: 0001_init.py  0002_rename_issue_fk_columns.py
postman/: AI4B.postman_collection.json  AI4B.postman_environment.json
scripts/: load_test.js  load_test.py  seed.py
tests/: conftest.py  test_auth_refresh_rotation.py  test_comment_permissions.py  test_health.py  test_integration_flow.py  test_issue_transitions.py  test_login_lockout.py  test_request_validation.py  test_services_utilities.py  test_sql_injection.py  test_startup.py  test_xss_and_security_headers.py
